--- a/mscalculador/src/main/resources/application.properties
+++ b/mscalculador/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+#================================ BANCO DE DADOS ========================================
+spring.datasource.url=jdbc:mysql://localhost:3306/mscalculador?useTimezone=true&serverTimezone=America/Sao_Paulo
+spring.datasource.username=admin
+spring.datasource.password=admin.123
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
