--- a/msemail/src/main/resources/application.properties
+++ b/msemail/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.show-sql=true
 #================================ EMAILS =================================================
 spring.mail.host=smtp.gmail.com
 spring.mail.username=devvpro.ti@gmail.com
-spring.mail.password=
+spring.mail.password=yytnfooyypkrudwh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable=true
